--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@
 .fa-anchor,.fa-coffee {font-size:200px}
 
 .navbar{
-    background-color: orange;
+    background-color: rgb(94, 26, 26);
 }
 .nav-link{
     color: black;
@@ -11,11 +11,11 @@
 
 /* typing hello...*/
 .hello {
-    color: orange;
+    color: rgb(94, 26, 26);
     text-shadow:1px 1px 0 #444
 }
 .css-typing p {
-   border-right: .15em solid orange;
+   border-right: .15em solid rgb(94, 26, 26);
     white-space: nowrap;
     overflow: hidden;
 }
@@ -54,7 +54,7 @@
         width: 0;
     }
     99.9% {
-        border-right: .15em solid orange;
+        border-right: .15em solid rgb(94, 26, 26);
     }
     100% {
         border: none;
@@ -66,7 +66,7 @@
         width: 0;
     }
     99.9% {
-        border-right: .15em solid orange;
+        border-right: .15em solid rgb(94, 26, 26);
     }
     100% {
         border: none;
@@ -81,7 +81,7 @@
         opacity: 1;
     }
     99.9% {
-        border-right: .15em solid orange;
+        border-right: .15em solid rgb(94, 26, 26);
     }
     100% {
         opacity: 1;
@@ -97,7 +97,7 @@
         opacity: 1;
     }
     99.9% {
-        border-right: .15em solid orange;
+        border-right: .15em solid rgb(94, 26, 26);
     }
     100% {
         opacity: 1;
@@ -148,9 +148,9 @@
 .circle {
     padding: 13px 20px;
     border-radius: 50%;
-    background-color: orange;
+    background-color: rgb(94, 26, 26);
     color: black;
-    max-height: 50px;
+    max-height: 70px;
     z-index: 2;
 }
 
@@ -160,7 +160,7 @@
 .how-it-works.row .col-2::after {
     content: "";
     position: absolute;
-    border-left: 3px solid orange;
+    border-left: 3px solid rgb(94, 26, 26);
     z-index: 1;
 }
 .how-it-works.row .col-2.bottom::after {
@@ -184,7 +184,7 @@
     height: 40px;
 }
 .timeline hr {
-    border-top: 3px solid orange;
+    border-top: 3px solid rgb(94, 26, 26);
     margin: 0;
     top: 17px;
     position: relative;
@@ -194,7 +194,7 @@
     overflow: hidden;
 }
 .timeline .corner {
-    border: 3px solid orange;
+    border: 3px solid rgb(94, 26, 26);
     width: 100%;
     position: relative;
     border-radius: 15px;
@@ -232,6 +232,10 @@
     margin: 20px 0px 30px 30px;
 }
 
+.bar-circle{
+    color: rgb(94, 26, 26);
+}
+
 .skillsTop {
     float: left;
     clear: right;
@@ -245,6 +249,24 @@
     clear: right;
     width: 80%;
     margin: 2px 0px 0px 0px;
+}
+
+shadow
+{
+    display:block;
+    position:relative;
+}
+
+.shadow:before
+{
+    display:block;
+    content:'';
+    position:absolute;
+    width:100%;
+    height:100%;
+    -moz-box-shadow:inset 0px 0px 6px 6px rgba(255,255,255,1);
+    -webkit-box-shadow:inset 0px 0px 6px 6px rgba(255,255,255,1);
+    box-shadow:inset 0px 0px 6px 6px rgba(255,255,255,1);
 }
 
 .progress {
